# lighter-rust

./: .gitignore  .openapi-generator-ignore  CLAUDE.md  Cargo.toml  INTEGRATION_TEST_PLAN.md  LICENSE  README.md  openapi.yaml  spec.md
.github/workflows/: ci.yml
.openapi-generator/: FILES  generator-config.yaml
docs/: Account.md  AccountApi.md  Balance.md  CandlestickApi.md  IntegrationGuide.md  OPENAPI_GENERATION.md  Order.md  OrderApi.md  OrderBook.md  Position.md  README.md  WebSocketClient.md
examples/: advanced_order_management.rs  basic_usage.rs  ffi_signer_correct.rs  ffi_signer_example.rs  mnemonic_wallet.rs  trading_bot.rs  websocket_example.rs
plans/: implementation-plan.md  technical-architecture.md
src/: config.rs  error.rs  ffi_client.rs  lib.rs  logging.rs  nonce.rs
src/api/: account.rs  candlestick.rs  mod.rs  order.rs  transaction.rs  transaction_api.rs
src/client/: api_client.rs  mod.rs  signer_client.rs  ws_client.rs
src/metadata/: mod.rs
src/models/: account.rs  common.rs  mod.rs  order.rs
src/signers/: ethereum.rs  ffi.rs  mod.rs
src/trading/: mod.rs
tests/: integration_tests.rs  mnemonic_tests.rs  real_api_integration.rs  serialization_tests.rs  signing_tests.rs
