[package]
name = "lighter-rust"
version = "0.1.0"
edition = "2021"
description = "A comprehensive Rust SDK for the Lighter trading platform with async/await, WebSocket support, and Ethereum wallet integration"
license = "MIT"
repository = "https://github.com/yongkangc/lighter-rust"
homepage = "https://github.com/yongkangc/lighter-rust"
documentation = "https://docs.rs/lighter-rust"
readme = "README.md"
authors = ["yongkangc"]
keywords = ["trading", "crypto", "lighter", "sdk", "defi"]
categories = ["api-bindings", "web-programming::http-client", "cryptography::cryptocurrencies"]
exclude = [
    ".github/",
    ".openapi-generator/",
    "CLAUDE.md",
    ".gitignore",
    "*.swp",
    "*.swo",
    "*~",
    ".DS_Store",
]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"
sha3 = "0.10"
alloy = { version = "0.5", features = ["signers", "signer-local", "rpc-types", "json-rpc"] }
bip39 = "2.0"
tiny-hderive = "0.3"
secp256k1 = "0.29"
tiny-keccak = { version = "2.0", features = ["keccak"] }
futures = "0.3"
tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.7"

[features]
default = []
